feat: Standardization and simplification of api products